Fixed layout bug with resume page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3868,7 +3868,8 @@ body {
 .resume .box {
 	background:white;
 	border-radius: 10px;
-	margin: 6vh 6vw 6vh 6vw;
+	margin: 3vh 6vw 3vh 6vw;
+	padding: 15px 0;
 	animation-delay:0.9s;
 	animation-duration:0.8s;
 	animation-fill-mode: both;
@@ -3906,27 +3907,13 @@ body {
 	margin: 0;
 }
 .resume {
-	/*background-attachment:fixed;
-	background-size: auto 100vh;
-	background-image: url(../img/sweden.jpg);
-	background-position:center;
-	background-repeat:no-repeat;*/
 	background-color: #bf334a;
 	background-image: linear-gradient(90deg, #bf334a, #343c66);
-	
+	padding: 0 0 3vh;
 	animation-delay:0.8s;
 	animation-duration:0.7s;
 	animation-fill-mode: both;
 	animation-name: fadeInDown;
-	
-	/*
-  width: 100%;
-  height: 100vh;
-  min-height: 700px;
-  background-image: url(../img/sweden.jpg);
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;*/
 }
 /*-------end resume page------*/
 
